assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700|Roboto:100,200,300,400,500,600,700');

body{
    font-family:"Poppins", sans-serif;
}



 /*-----------------------------------Colours + Backgrounds!! */

.navbar-light .navbar-brand{
    color: #1F6EAB
}
/* Index page background */
body, html {
  height: 100%;
}
.bg {
  
  background-image: url("../images/Keys.jpg");
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
   -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
}


/*-----------------------------------Header!! */

.navbar-nav{
    
    font-weight: 400;
    text-align:center;
}

.navbar-brand{
    padding-bottom: 0;
    font-weight: 500;   
}

.navbar-nav>li{
  border-right: 1px solid #1F6EAB; 
}
.navbar-nav>li:last-child{
   border: none;
}

.noHover {
    pointer-events: none;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: rgba(201,102,0,.7);    
}
 
   /*-----------------------------------Footer!! */

#footer{
    position: fixed;
    bottom: 0;
    width: 100%;
    
}

.container-fluid{
    background-color: #f8f9fa;
}

.footertext{
    text-align: center;
    font-size: 11px;
    color: rgba(201,102,0,.7);  
}

.col-10 { 
    padding-top:20px;   
}

 ul {
		list-style: none;
		margin: 0;
        padding: 0;
        text-align: center;
        
 }

.social-networks li {
    display: inline;
}
 

.social-networks i{
    color: rgba(0,0,0,.5);
    text-align: center;
    margin: 0;
    font-size: 25px;
    padding-top: 15px;
    padding-right: 10px;
  
   
}

.social-networks i:hover{
   color:  rgba(201,102,0,.7);
}

  /*-----------------------------------CALLOUT INDEX PAGE!! */

.col-12{
    display: flex;
}

.container {
    width: 100%;
    padding-right: 0; 
    padding-left: 0 ;
    margin-right: auto;
    margin-left: auto;
    padding-top: 100px;
}

.jumbotron-header{
    text-align: center;
    font-weight: 600;
    z-index: 1;
    font-size: 3em;
}

.textinfo{
    text-align: center;
    font-weight: 400;
    z-index: 1;
    font-size: 18px;
}

.jumbotron{
    background-color:rgba(178,190,181,.7);
    justify-content: center;
    align-items: center;
    width: 400px;
    margin:auto;
    
}

.block-divider{
    width: 175px;
    height: 1px;
    background-color:  #1F6EAB;

}
/*----------------------------------- H1 Headings !! */
.h1-contact{
    text-align: center;
    text-transform: uppercase;
    text-decoration: underline;
    padding-top: 20px;
    font-weight: 600;
    color:  rgba(201,102,0,.7);
}
 /*-----------------------------------CONTACT FORM and MAP!! */

.forminfo{
    
    margin-top: 10px;
    font-family: "Roboto", sans-serif;
    display: block;
}

label{
    display: inline-block;
    margin-bottom: .5rem;
    font-weight: bold;
    color:  rgba(201,102,0,.7);
}

.btn-success{
    color: rgba(0,0,0,.5);
    background-color: rgba(0,0,0,.5);
    border-color: rgba(0,0,0,.5);
    text-transform: uppercase;
}

.btn-success:hover {
    color:  #1F6EAB;
    background-color:  rgba(201,102,0,.7);
    border-color: rgba(201,102,0,.7);
}
.btn-success.focus, .btn-success:focus {
    color:  #1F6EAB;
    background-color:  rgba(201,102,0,.7);
    border-color: rgba(201,102,0,.7);
    box-shadow: 0 0 0 0.2rem rgba(201,102,0,.5);
}

.btn-success:not(:disabled):not(.disabled).active, .btn-success:not(:disabled):not(.disabled):active, .show>.btn-success.dropdown-toggle {
    color: #1F6EAB;
    background-color:  rgba(201,102,0,.7);
    border-color: rgba(201,102,0,.7);
}
.embed-responsive {
    position: relative;
    display: block;
    margin-top: 1.3em;
    margin-left: 1.3em;
    margin-bottom: 1.3em;
}

.container {
    width: 100%;
    padding-right: 0;
    padding-left: 0;
     margin-right: auto;
    margin-left: auto; 
    padding-top: 40px;
   
}

@media (min-width:576px)
.container .container-sm {
    max-width: 50%;
}

